fixed spacing around titles on landing page

--- a/css/landing_page.scss
+++ b/css/landing_page.scss
@@ -13,8 +13,8 @@
     .hero-head{
         .title{
             text-transform: uppercase;
-            margin-top: 100px;
-            margin-bottom: 50px;
+            margin-top: 75px;
+            margin-bottom: 20px;
         }
     }
 
